--- a/.travis.yml
+++ b/.travis.yml
@@ -11,8 +11,5 @@ python:
   - "pypy3" # Pypy3 2.4.0
   - "pypy-5.3.1"
 # command to install dependencies
-install:
-  - pip install .
-  - pip install -r requirements.txt
 # command to run tests
-script: pytest
+script: python main.py
